engine/tests/fixtures/invalid/ui/shape-input-dummy.tg
shape shape_input_dummy {
  name "Dummy Input"
  description "Input for invalid UI tests"

  fields {
    status text optional
  }

  status active
}
